--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,10 @@
-{ "rewrites": [ { "source": "/(.*)", "destination": "/" } ] }
+{
+  "cleanUrls": true,
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
+  ],
+  "outputDirectory": "build/web"
+}
