--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: null2
-description: NULL² philosophical SNS demo
+description: NULL² SNS platform demo with SidePanel and screens
 version: 1.0.0
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -7,4 +7,4 @@ dependencies:
   flutter:
     sdk: flutter
 flutter:
-  uses-material-design: false
+  uses-material-design: true
