--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: null2
-description: NULL² SNS platform demo with SidePanel and screens
+description: NULL² SNS platform demo with SidePanel, Post UI, and screens
 version: 1.0.0
 environment:
   sdk: ">=3.0.0 <4.0.0"
